    Boehm-Weiser garbage collector cannot scan the data sections of
    any libraries, and that register_root must be used everywhere.

  - READ/WRITE-SEQUENCE would read or write one element more than
    required.

  - LOAD-TIME-VALUE was broken.

  - Invoking finalizers during GC could trash the environment of a
    running function, either interpreted or compiled.

* ANSI compatibility:

  - Hashtables can now have EQUALP as test function.

  - The compiler no longer handles IN-PACKAGE and DEFPACKAGE specially.
    When a symbol is loaded from a compiled file, and the home package
    of this symbol does not exist, a new incomplete package is
    created. If MAKE-PACKAGE is invoked subsequently in this binary
    file, the incomplete package is finished and returned. If at the
    end of the load process there are still incomplete packages, a
    correctable error is signaled.

ECL 0.9d
========

* Errors fixed:

  - Bugs in the mechanism for automatically creating packages when
    loading binary files.

* Documentation:

  - New manual page documents the scripting facilities of ECL
    (contributed by Julian St.)

TODO:
=====

* Selectively remove spices from read.d and object.h

* Implement memory collection based on mmap()

* Improve the garbage collector using kernel information about dirty
  pages.

* Improve fixnum_times.

* #'unread-char does not fail when the character differs from the
  original one.

* vector-push-extend may succeed even if the vector is not
  adjustable. Should we be more strict?

* should we relax ASSOC? (See lists156.tst)

* boost setf and generalized places -- the current implementation is
  extremely faulty with respect to the standards.

* expand parse_namestring() to accept scaped strings, spaces, etc.

* Remove most property lists from standard symbols.

* Make the version with Boehm's GC and the version without it binary
  compatible.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:70 ***
;;; End: ***